src/components/select/select.scss
@import '../../style/internal/mdc-variables';
@import '../../style/internal/shared_input-select-picker';

@import '@limetech/mdc-select/mdc-select';
@import '@limetech/mdc-select/helper-text/mdc-select-helper-text';
@import '@limetech/mdc-ripple/mdc-ripple';
@import '@limetech/mdc-line-ripple/mdc-line-ripple';
@import '@limetech/mdc-floating-label/mdc-floating-label';

@import '../../style/mixins';

:host([hidden]) {
    display: none;
}

.limel-select__selected-text {
    @include looks-like-input-label;
    box-sizing: border-box;
    outline: none;

    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;

    padding: pxToRem(20) pxToRem(40) pxToRem(6) pxToRem(16);
}

.limel-select {
    display: grid;

    .limel-select-trigger {
        display: inline-flex;
        height: $height-of-mdc-text-field;

        cursor: pointer;
        border-radius: pxToRem(5);
        background-color: $background-color-normal;

        &:focus {
            outline: none;
            .mdc-select__dropdown-icon {
                box-shadow: var(--button-shadow-hovered);
            }
            .mdc-floating-label {
                color: var(--mdc-theme-primary);
            }
        }

        .mdc-floating-label {
            top: $floating-label-top-value;
            right: pxToRem(
                16
            ); //This is a hack to force the label truncate when container is too little. Otherwise due to position: absolute it won't. Kia
            transform: translateY(-50%);

            &.mdc-floating-label--float-above {
                @include label--float-above;
            }

            &.mdc-floating-label--active {
                color: var(--mdc-theme-primary);
            }
        }

        .mdc-line-ripple {
            background-color: var(--mdc-theme-primary);
        }

        .mdc-select__dropdown-icon {
            transition: box-shadow 0.2s ease;
            border-radius: 50%;
            background: url("data:image/svg+xml;charset=utf-8,%3Csvg width='10' height='5' viewBox='7 10 10 5' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' opacity='.54' d='M7 10l5 5 5-5z'/%3E%3C/svg%3E")
                no-repeat 50%;
        }
    }

    .limel-select-trigger,
    .limel-select__selected-text {
        width: 100%;
        position: relative;
    }

    &.mdc-select--disabled {
        .limel-select-trigger {
            @include looks-disabled;
        }
    }

    &:not(.mdc-select--disabled) {
        .limel-select-trigger {
            @include is-elevated-clickable;

            &:hover {
                background-color: $background-color-hovered;
            }

            &.limel-select--focused {
                background-color: $background-color-focused;

                .mdc-floating-label {
                    color: var(--mdc-theme-primary);
                }

                .mdc-line-ripple {
                    transform: scaleX(1);
                    opacity: 1;
                    background-color: var(--mdc-theme-primary);
                }

                .mdc-select__dropdown-icon {
                    transform: rotate(180deg);
                    color: var(--mdc-theme-primary);
                }
            }
        }
    }

    &.limel-select--required {
        .mdc-floating-label::after {
            content: '*';
        }
    }

    &.limel-select--invalid {
        .limel-select-trigger {
            .mdc-floating-label {
                color: $mdc-theme-error;
            }
            .mdc-line-ripple {
                background-color: $mdc-theme-error;
                transform: scaleX(1);
                opacity: 1;
            }
        }
    }
}

select.limel-select__native-control {
    position: absolute;
    top: 0;
    left: 0;

    width: 100%;
    height: 100%;
    opacity: 0;
    border: 0;
}

